# tmpmail

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  commit-changes.sh  compose.yaml  dummy-test.sh  fix-view.sh  security_best_practices_report.md  test_db.sh  workflow.csv  设计思路.md
frontend/: AGENTS.md  Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  proxy.ts  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: AGENTS.md  globals.css
frontend/components/: account-info-banner.tsx  account-modal.tsx  admin-entry-page.tsx  app-shell.tsx  brand-mark.tsx  console-action-modal.tsx  domain-management-page.tsx  domain-selector.tsx  empty-state.tsx  feature-cards.tsx  header.tsx  heroui-field-styles.ts  linux-do-callback-page.tsx  login-modal.tsx  message-detail.tsx  message-list.tsx  provider-settings-page.tsx  sidebar.tsx  (+4 more)
migrations/: 0001_postgres_store.sql  0002_accounts_owner_user_id.sql  0003_admin_state_store.sql  0004_admin_state_cloudflare_tokens.sql  0005_admin_state_linux_do_client_secret.sql  0006_otp_codes.sql  0007_admin_state_smtp_password.sql  0008_domain_sharing.sql
scripts/: compose-init-secrets.sh  dev-down.sh  dev-up.sh  inbucket-deploy.sh  smoke.sh
src/: AGENTS.md  admin_state.rs  app.rs  app_store.rs  auth.rs  cleanup_worker.rs  cloudflare.rs  config.rs  domain_management.rs  domain_worker.rs  error.rs  inbucket.rs  ingest.rs  mailer.rs  main.rs  metrics.rs  models.rs  otp.rs  persistence.rs  pg_store.rs  rate_limit.rs  realtime.rs  state.rs  store.rs  test_support.rs
(+56 files in other folders)
